product rest already complete
